# MLangelo

./: .gitignore  README.md  example.py  get_prediction.py  pyproject.toml
data/: extract_data.ipynb  get_new_data_apache.py  get_new_data_local.py
data_collection/: get_new_data_apache.py
model_test_results/: confusion_matrix.csv  misclassified.json  predictions_transfer.json  test_summary.json  test_summary_original.json  test_summary_transfer.json
prediction/results/: predictions_20251216_235119.csv
src/artdetectors/: __init__.py  app.py  blip_caption.py  clip_style.py  load_dataset.ipynb  pipeline.py  restyle.py  susy_transfer.py  test_susy_transfer.py  train_susy_transfer.py
src/artdetectors/data/: style.txt
